--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="container">
     <h2>About Us</h2>
     <p>
-      At Amit Mobile Detailing, we bring showroom-quality shine directly to you. With expert techniques and premium products, we restore and protect your car’s finish wherever you are.
+      Amit Mobile Detailing is a new mobile auto detailing service serving Belleville and nearby areas. We focus on delivering high-quality car care right at your doorstep. Our services include professional exterior washes, interior cleaning, waxing, and paint protection using premium products and expert techniques. Whether you need a quick clean or a full detail, we are committed to providing reliable and convenient mobile detailing that protects and restores your vehicle’s finish. Choose Amit Mobile Detailing for quality mobile auto detailing services tailored to your needs.
     </p>
   </div>
 </section>
@@ -119,9 +119,32 @@
       </div>
       <button type="submit" class="btn btn-primary">Book Now</button>
     </form>
-    <p class="mt-3">Email: info@amitmobiledetailing.com | Phone: +1 (555) 123-4567</p>
   </div>
 </section>
+
+<footer style="background-color:#222; color:#fff; text-align:center; padding:30px 0 20px 0; margin-top:40px; font-size:15px;">
+  <div style="max-width:900px; margin:0 auto;">
+    <!-- Main Contact Info -->
+    <div style="margin-bottom:10px;">
+      <a href="tel:6138476402" style="color:#00aced; text-decoration:none; margin-right:15px;">
+        Call/Text: <strong>613-847-6402</strong>
+      </a>
+      <a href="mailto:cleancardetailing.ca@gmail.com" style="color:#00aced; text-decoration:none;">
+        Email: <strong>cleancardetailing.ca@gmail.com</strong>
+      </a>
+    </div>
+
+    <!-- Scroll to Top Button -->
+    <button id="toTopBtn" style="display:none;position:fixed;bottom:35px;right:25px;z-index:99;font-size:18px;border:none;outline:none;background-color:#00aced;color:white;cursor:pointer;padding:10px 16px;border-radius:5px;">
+      ↑ Top
+    </button>
+    
+    <!-- Copyright -->
+    <div style="margin-top:15px; color:#888;">
+      &copy; 2025 Amit Mobile Detailing. All rights reserved.
+    </div>
+  </div>
+</footer>
 
 <!-- Popup Booking -->
 <div id="popup">
